<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.Login">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="130dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/student_accesibility_logo"
        android:src="@drawable/dal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/stuaccess"
        android:textAlignment="center"
        android:textColor="@color/foggy"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:background="@drawable/message_bg"
        android:ems="10"
        android:hint="@string/dalca"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="8dp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_below="@+id/edt_email"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:background="@drawable/message_bg"
        android:ems="10"
        android:padding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/send_msg_bg"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/forgot_pswd"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/loginButton"
        android:layout_centerInParent="true"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/foggy"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/aboutUsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_pswd"
        android:layout_centerInParent="true"
        android:layout_marginTop="74dp"
        android:background="@drawable/send_msg_bg"
        android:backgroundTint="#FFEB3B"
        android:padding="8dp"
        android:text="@string/about_us"
        android:textStyle="bold"
        android:textColor="@color/black" />
</RelativeLayout>